[tool.poetry]
name = "repl_nix_nara"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
replit = "^3.2.5"
stripe = "^5.0.0"
pdfminer = "^20191125"
PyPDF2 = "^3.0.1"
twilio = "^7.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
